--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
