--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
