--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.11",
+    "tsparticles": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
