--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.11",
     "tsparticles": "^3.5.0",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
