--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.11",
     "tsparticles": "^3.5.0",
